# Willy-Desktop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  mini-soak.yml
assets/manifests/willy_annoyed/: manifest.json
docs/: AGENT_DEVELOPMENT_SPEC.md  AGENT_PLAN.md  ARCHITECTURE.md  CLAUDE.md  GATE_A_BACKLOG.md  GATE_B_BACKLOG.md  IDEAS_BACKLOG.md  INTERFACES.md  MISSING_SPECS.md  MVP_SPEC.md  OPEN_DECISIONS.md  STUDIO_SPEC.md
docs/reference/: willy_behaviors_lab.json
docs/testing/: GATE_A_REPORT.md  REGRESSION_REPORT_TEMPLATE.md  TESTING.md
src/willy/: __init__.py  __main__.py
src/willy/animation/: __init__.py  (+5 more)
tests/: test_bus.py  test_contracts.py
tests/animation/: conftest.py  test_controller.py  test_library.py  test_manifests.py  test_mirroring.py  test_pixmap_cache.py  test_render_wiring.py  test_scale.py  test_timing.py
tests/core/: conftest.py  test_drag_state_machine.py  test_interaction.py
tests/persistence/: conftest.py  test_crash_safety.py  test_database.py  test_debounce.py  test_repositories.py
tests/platform/: conftest.py  test_app_wiring.py  test_click_reactions.py  test_drag_and_persistence.py  test_floor_gravity.py  test_screens.py  test_single_instance.py  test_startle_reaction.py  test_tray_controls.py  test_window.py
tests/simulation/: conftest.py  test_event_generator.py  test_forbidden_api_check.py  test_run_soak_test_cli.py  test_soak_simulation.py
tools/test_harness/: event_generator.py  forbidden_api_check.py  memory_probe.py  profile_idle.py  run_soak_test.py  soak_runner.py
(+52 files in other folders)
