[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "willy-desktop"
version = "0.1.0"
description = "Willy Desktop — desktop creature (Gate A foundation)"
# Spec pins 3.12; this machine has 3.13 — deviation recorded in the A-01
# completion report. Contracts are stdlib-only either way.
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
